--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "check": "npm-check -u"
   },
   "dependencies": {
+    "moment": "^2.25.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -55,6 +57,7 @@
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "babel-jest": "^25.1.0",
