--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/runtime": "^7.8.3",
     "@types/enzyme": "^3.10.4",
     "@types/jest": "^24.9.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^13.5.0",
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.19",
