--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "check": "npm-check -u"
   },
   "dependencies": {
-    "moment": "^2.25.3",
+    "luxon": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
@@ -53,7 +53,7 @@
     "@babel/runtime": "^7.8.3",
     "@types/enzyme": "^3.10.4",
     "@types/jest": "^24.9.1",
-    "@types/moment": "^2.13.0",
+    "@types/luxon": "^1.24.0",
     "@types/node": "^13.5.0",
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.19",
