--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "check": "npm-check -u"
   },
   "dependencies": {
+    "firebase": "^7.14.3",
     "luxon": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "uuidv4": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
