--- a/package.json
+++ b/package.json
@@ -40,72 +40,74 @@
     "check": "npm-check -u"
   },
   "dependencies": {
-    "firebase": "^7.14.3",
-    "luxon": "^1.24.1",
+    "firebase": "^7.21.0",
+    "luxon": "^1.25.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "uuidv4": "^6.0.8"
+    "react-firebase-hooks": "^2.2.0",
+    "react-router-dom": "^5.2.0",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
-    "@types/enzyme": "^3.10.4",
-    "@types/jest": "^24.9.1",
-    "@types/luxon": "^1.24.0",
-    "@types/node": "^13.5.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
+    "@mysticatea/eslint-plugin": "^13.0.0",
+    "@types/enzyme": "^3.10.6",
+    "@types/jest": "^26.0.14",
+    "@types/luxon": "^1.24.4",
+    "@types/node": "^14.11.1",
     "@types/power-assert": "^1.5.3",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "babel-jest": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "babel-preset-power-assert": "^3.0.0",
     "body-parser": "^1.19.0",
-    "browser-sync": "^2.26.7",
-    "caniuse-lite": "^1.0.30001023",
+    "browser-sync": "^2.26.12",
+    "caniuse-lite": "^1.0.30001131",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "colors": "^1.4.0",
     "cpx": "^1.5.0",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-react": "^7.18.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.9.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-tsc": "^2.0.0",
     "express": "^4.17.1",
     "git-pre-push": "0.0.5",
     "glob": "^7.1.6",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
     "npm-check": "^5.9.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
-    "postcss-browser-reporter": "^0.6.0",
-    "postcss-cli": "^7.1.0",
+    "postcss": "^8.0.5",
+    "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
     "power-assert": "^1.6.1",
     "pre-commit": "^1.2.2",
-    "pug": "^2.0.4",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
-    "stylelint": "^13.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^4.0.0",
-    "ts-jest": "^25.0.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "stylelint": "^13.7.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "ts-jest": "^26.3.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "pre-commit": [
     "lint"
@@ -128,35 +130,6 @@
           "power-assert"
         ]
       }
-    }
-  },
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "plugins": [
-      "@typescript-eslint",
-      "babel",
-      "react",
-      "standard"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "env": {
-      "es6": true,
-      "node": true
-    },
-    "rules": {
-      "@typescript-eslint/adjacent-overload-signatures": "error",
-      "react/prop-types": 0,
-      "no-undef": "off"
     }
   },
   "stylelint": {
