--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "lint:css": "stylelint 'src/app/components/**/*.tsx' --fix",
     "lint:js": "eslint ./src/**/*.ts*",
     "dev:js": "webpack --mode=development --progress --watch",
-    "dev:css": "postcss ./src/styles/pages/**/*.css -b ./src/styles/pages -d ./public/css -w",
+    "dev:css": "postcss ./src/styles/pages/**/*.css -d ./public/css -w",
     "dev:img": "cpx './src/images/**/*' ./public/img -w",
     "dev:assets": "cpx './src/assets/**/*' ./public -w",
     "dev:serve": "cd ./functions && npm run serve",
     "dev:serve:sync": "browser-sync start -b 'GoogleChrome' -f ./public -p localhost:5000 --port 3333",
     "build": "cross-env NODE_ENV=production run-s lint test clean build:**",
     "build:js": "webpack --mode=production --progress",
-    "build:css": "postcss ./src/styles/pages/**/*.css -b ./src/styles/pages -d ./public/css",
+    "build:css": "postcss ./src/styles/pages/**/*.css -d ./public/css",
     "build:img": "cpx './src/images/**/*' './public/img'",
     "build:assets": "cpx './src/assets/**/*' './public'",
     "clean": "rimraf ./public/* && mkdir ./public/js ./public/img",
@@ -46,7 +46,7 @@
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
-    "uuidv4": "^6.2.3"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -57,12 +57,13 @@
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/enzyme": "^3.10.6",
     "@types/jest": "^26.0.14",
-    "@types/luxon": "^1.24.4",
+    "@types/luxon": "^1.25.0",
     "@types/node": "^14.11.1",
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "babel-jest": "^26.3.0",
@@ -70,7 +71,7 @@
     "babel-preset-power-assert": "^3.0.0",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.12",
-    "caniuse-lite": "^1.0.30001131",
+    "caniuse-lite": "^1.0.30001133",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "colors": "^1.4.0",
     "cpx": "^1.5.0",
@@ -92,10 +93,12 @@
     "nodemon": "^2.0.4",
     "npm-check": "^5.9.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.0.5",
+    "postcss": "^7.0.26",
+    "postcss-browser-reporter": "^0.6.0",
     "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
+    "postcss-reporter": "^6.0.1",
     "power-assert": "^1.6.1",
     "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.12.0",
@@ -104,8 +107,8 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "ts-jest": "^26.3.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
