--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-game",
+  "name": "mentalgraph",
   "version": "1.0.0",
   "description": "A mental health logger.",
   "main": "index.js",
@@ -40,12 +40,13 @@
     "check": "npm-check -u"
   },
   "dependencies": {
-    "firebase": "^7.21.0",
+    "firebase": "^7.21.1",
     "luxon": "^1.25.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -55,35 +56,36 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "@mysticatea/eslint-plugin": "^13.0.0",
-    "@types/enzyme": "^3.10.6",
+    "@types/enzyme": "^3.10.7",
     "@types/jest": "^26.0.14",
     "@types/luxon": "^1.25.0",
-    "@types/node": "^14.11.1",
+    "@types/node": "^14.11.2",
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recharts": "^1.8.15",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "babel-preset-power-assert": "^3.0.0",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.12",
-    "caniuse-lite": "^1.0.30001133",
+    "caniuse-lite": "^1.0.30001137",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "colors": "^1.4.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^7.9.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.10.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.0.1",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-tsc": "^2.0.0",
     "express": "^4.17.1",
@@ -93,20 +95,20 @@
     "nodemon": "^2.0.4",
     "npm-check": "^5.9.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
+    "postcss": "^8.1.0",
     "postcss-browser-reporter": "^0.6.0",
-    "postcss-cli": "^7.1.2",
+    "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
+    "postcss-reporter": "^7.0.1",
     "power-assert": "^1.6.1",
     "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
-    "stylelint": "^13.7.1",
+    "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^26.4.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
